// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should call New Relic Event API for $type toggle 1`] = `
{
  "Api-Key": "fakeLicenseKey",
  "Content-Encoding": "gzip",
  "Content-Type": "application/json",
}
`;

exports[`Should call New Relic Event API for $type toggle 2`] = `
{
  "data": [
    31,
    139,
    8,
    0,
    0,
    0,
    0,
    0,
    0,
    19,
    109,
    141,
    205,
    10,
    130,
    64,
    24,
    69,
    223,
    229,
    91,
    143,
    145,
    132,
    154,
    179,
    170,
    192,
    69,
    155,
    54,
    229,
    42,
    90,
    76,
    206,
    213,
    132,
    113,
    140,
    249,
    17,
    68,
    124,
    247,
    144,
    52,
    92,
    180,
    61,
    231,
    92,
    238,
    64,
    232,
    160,
    221,
    173,
    127,
    131,
    56,
    229,
    90,
    65,
    216,
    215,
    21,
    166,
    171,
    11,
    100,
    147,
    33,
    70,
    254,
    75,
    179,
    85,
    88,
    66,
    56,
    111,
    16,
    20,
    6,
    194,
    65,
    18,
    91,
    200,
    69,
    52,
    147,
    183,
    109,
    131,
    192,
    181,
    85,
    165,
    64,
    140,
    230,
    234,
    212,
    207,
    230,
    224,
    45,
    204,
    166,
    104,
    155,
    181,
    203,
    45,
    204,
    89,
    18,
    15,
    194,
    221,
    46,
    249,
    241,
    163,
    35,
    30,
    38,
    97,
    26,
    239,
    227,
    52,
    74,
    210,
    104,
    203,
    72,
    255,
    187,
    128,
    22,
    79,
    5,
    73,
    188,
    20,
    202,
    130,
    145,
    117,
    70,
    56,
    84,
    53,
    44,
    241,
    251,
    176,
    108,
    36,
    74,
    225,
    149,
    163,
    241,
    49,
    126,
    0,
    102,
    187,
    172,
    235,
    249,
    0,
    0,
    0,
  ],
  "type": "Buffer",
}
`;

exports[`Should call New Relic Event API for FEATURE_ARCHIVED toggle with project info 1`] = `
{
  "Api-Key": "fakeLicenseKey",
  "Content-Encoding": "gzip",
  "Content-Type": "application/json",
}
`;

exports[`Should call New Relic Event API for FEATURE_ARCHIVED toggle with project info 2`] = `
{
  "data": [
    31,
    139,
    8,
    0,
    0,
    0,
    0,
    0,
    0,
    19,
    101,
    141,
    75,
    10,
    194,
    48,
    24,
    6,
    239,
    242,
    175,
    19,
    49,
    148,
    54,
    182,
    43,
    21,
    186,
    112,
    227,
    70,
    123,
    128,
    144,
    126,
    182,
    133,
    38,
    149,
    188,
    160,
    136,
    119,
    151,
    226,
    131,
    130,
    219,
    153,
    129,
    121,
    16,
    18,
    108,
    184,
    206,
    119,
    80,
    69,
    141,
    29,
    161,
    124,
    127,
    129,
    75,
    131,
    70,
    189,
    24,
    98,
    20,
    223,
    180,
    94,
    133,
    55,
    168,
    16,
    29,
    184,
    114,
    186,
    31,
    18,
    90,
    98,
    95,
    116,
    86,
    102,
    9,
    252,
    100,
    192,
    195,
    212,
    117,
    35,
    136,
    145,
    118,
    80,
    1,
    237,
    113,
    254,
    152,
    125,
    244,
    112,
    27,
    61,
    153,
    181,
    107,
    60,
    220,
    169,
    165,
    138,
    139,
    44,
    147,
    63,
    126,
    8,
    84,
    9,
    41,
    202,
    98,
    87,
    148,
    185,
    44,
    243,
    45,
    35,
    251,
    191,
    120,
    190,
    0,
    229,
    110,
    183,
    126,
    200,
    0,
    0,
    0,
  ],
  "type": "Buffer",
}
`;

exports[`Should call New Relic Event API for FEATURE_ARCHIVED with project info 1`] = `
{
  "Api-Key": "fakeLicenseKey",
  "Content-Encoding": "gzip",
  "Content-Type": "application/json",
}
`;

exports[`Should call New Relic Event API for FEATURE_ARCHIVED with project info 2`] = `
{
  "data": [
    31,
    139,
    8,
    0,
    0,
    0,
    0,
    0,
    0,
    19,
    101,
    141,
    75,
    10,
    194,
    48,
    24,
    6,
    239,
    242,
    175,
    19,
    49,
    148,
    54,
    182,
    43,
    21,
    186,
    112,
    227,
    70,
    123,
    128,
    144,
    126,
    182,
    133,
    38,
    149,
    188,
    160,
    136,
    119,
    151,
    226,
    131,
    130,
    219,
    153,
    129,
    121,
    16,
    18,
    108,
    184,
    206,
    119,
    80,
    69,
    141,
    29,
    161,
    124,
    127,
    129,
    75,
    131,
    70,
    189,
    24,
    98,
    20,
    223,
    180,
    94,
    133,
    55,
    168,
    16,
    29,
    184,
    114,
    186,
    31,
    18,
    90,
    98,
    95,
    116,
    86,
    102,
    9,
    252,
    100,
    192,
    195,
    212,
    117,
    35,
    136,
    145,
    118,
    80,
    1,
    237,
    113,
    254,
    152,
    125,
    244,
    112,
    27,
    61,
    153,
    181,
    107,
    60,
    220,
    169,
    165,
    138,
    139,
    44,
    147,
    63,
    126,
    8,
    84,
    9,
    41,
    202,
    98,
    87,
    148,
    185,
    44,
    243,
    45,
    35,
    251,
    191,
    120,
    190,
    0,
    229,
    110,
    183,
    126,
    200,
    0,
    0,
    0,
  ],
  "type": "Buffer",
}
`;

exports[`Should call New Relic Event API for custom body template 1`] = `
{
  "Api-Key": "fakeLicenseKey",
  "Content-Encoding": "gzip",
  "Content-Type": "application/json",
}
`;

exports[`Should call New Relic Event API for custom body template 2`] = `
{
  "data": [
    31,
    139,
    8,
    0,
    0,
    0,
    0,
    0,
    0,
    19,
    109,
    142,
    187,
    10,
    194,
    64,
    20,
    68,
    255,
    229,
    214,
    27,
    49,
    72,
    18,
    179,
    149,
    10,
    22,
    54,
    54,
    106,
    37,
    22,
    107,
    118,
    18,
    3,
    251,
    144,
    221,
    155,
    64,
    16,
    255,
    93,
    36,
    42,
    41,
    108,
    231,
    204,
    97,
    230,
    65,
    232,
    225,
    248,
    56,
    220,
    65,
    146,
    78,
    206,
    64,
    197,
    219,
    1,
    161,
    111,
    43,
    108,
    223,
    132,
    4,
    117,
    99,
    186,
    157,
    20,
    107,
    40,
    238,
    2,
    18,
    184,
    190,
    13,
    222,
    89,
    56,
    78,
    116,
    27,
    213,
    213,
    64,
    147,
    248,
    226,
    189,
    178,
    239,
    114,
    244,
    22,
    9,
    251,
    166,
    49,
    32,
    65,
    19,
    133,
    36,
    105,
    244,
    48,
    254,
    110,
    199,
    165,
    42,
    64,
    49,
    244,
    102,
    248,
    88,
    171,
    46,
    34,
    204,
    42,
    111,
    167,
    236,
    20,
    17,
    118,
    154,
    100,
    146,
    46,
    22,
    197,
    47,
    95,
    51,
    201,
    180,
    72,
    203,
    124,
    153,
    151,
    89,
    81,
    102,
    115,
    65,
    238,
    255,
    252,
    120,
    82,
    214,
    202,
    68,
    8,
    138,
    28,
    20,
    163,
    105,
    17,
    73,
    158,
    31,
    95,
    71,
    163,
    86,
    157,
    97,
    122,
    94,
    158,
    47,
    218,
    59,
    105,
    191,
    34,
    1,
    0,
    0,
  ],
  "type": "Buffer",
}
`;

exports[`Should call New Relic Event API for customHeaders in headers when calling service 1`] = `
{
  "Api-Key": "fakeLicenseKey",
  "Content-Encoding": "gzip",
  "Content-Type": "application/json",
  "MY_CUSTOM_HEADER": "MY_CUSTOM_VALUE",
}
`;

exports[`Should call New Relic Event API for customHeaders in headers when calling service 2`] = `
{
  "data": [
    31,
    139,
    8,
    0,
    0,
    0,
    0,
    0,
    0,
    19,
    109,
    142,
    187,
    10,
    194,
    64,
    20,
    68,
    255,
    229,
    214,
    27,
    49,
    72,
    18,
    179,
    149,
    10,
    22,
    54,
    54,
    106,
    37,
    22,
    107,
    118,
    18,
    3,
    251,
    144,
    221,
    155,
    64,
    16,
    255,
    93,
    36,
    42,
    41,
    108,
    231,
    204,
    97,
    230,
    65,
    232,
    225,
    248,
    56,
    220,
    65,
    146,
    78,
    206,
    64,
    197,
    219,
    1,
    161,
    111,
    43,
    108,
    223,
    132,
    4,
    117,
    99,
    186,
    157,
    20,
    107,
    40,
    238,
    2,
    18,
    184,
    190,
    13,
    222,
    89,
    56,
    78,
    116,
    27,
    213,
    213,
    64,
    147,
    248,
    226,
    189,
    178,
    239,
    114,
    244,
    22,
    9,
    251,
    166,
    49,
    32,
    65,
    19,
    133,
    36,
    105,
    244,
    48,
    254,
    110,
    199,
    165,
    42,
    64,
    49,
    244,
    102,
    248,
    88,
    171,
    46,
    34,
    204,
    42,
    111,
    167,
    236,
    20,
    17,
    118,
    154,
    100,
    146,
    46,
    22,
    197,
    47,
    95,
    51,
    201,
    180,
    72,
    203,
    124,
    153,
    151,
    89,
    81,
    102,
    115,
    65,
    238,
    255,
    252,
    120,
    82,
    214,
    202,
    68,
    8,
    138,
    28,
    20,
    163,
    105,
    17,
    73,
    158,
    31,
    95,
    71,
    163,
    86,
    157,
    97,
    122,
    94,
    158,
    47,
    218,
    59,
    105,
    191,
    34,
    1,
    0,
    0,
  ],
  "type": "Buffer",
}
`;

exports[`Should call New Relic Event API for toggled environment 1`] = `
{
  "Api-Key": "fakeLicenseKey",
  "Content-Encoding": "gzip",
  "Content-Type": "application/json",
}
`;

exports[`Should call New Relic Event API for toggled environment 2`] = `
{
  "data": [
    31,
    139,
    8,
    0,
    0,
    0,
    0,
    0,
    0,
    19,
    109,
    142,
    187,
    10,
    194,
    64,
    20,
    68,
    255,
    229,
    214,
    27,
    49,
    72,
    18,
    179,
    149,
    10,
    22,
    54,
    54,
    106,
    37,
    22,
    107,
    118,
    18,
    3,
    251,
    144,
    221,
    155,
    64,
    16,
    255,
    93,
    36,
    42,
    41,
    108,
    231,
    204,
    97,
    230,
    65,
    232,
    225,
    248,
    56,
    220,
    65,
    146,
    78,
    206,
    64,
    197,
    219,
    1,
    161,
    111,
    43,
    108,
    223,
    132,
    4,
    117,
    99,
    186,
    157,
    20,
    107,
    40,
    238,
    2,
    18,
    184,
    190,
    13,
    222,
    89,
    56,
    78,
    116,
    27,
    213,
    213,
    64,
    147,
    248,
    226,
    189,
    178,
    239,
    114,
    244,
    22,
    9,
    251,
    166,
    49,
    32,
    65,
    19,
    133,
    36,
    105,
    244,
    48,
    254,
    110,
    199,
    165,
    42,
    64,
    49,
    244,
    102,
    248,
    88,
    171,
    46,
    34,
    204,
    42,
    111,
    167,
    236,
    20,
    17,
    118,
    154,
    100,
    146,
    46,
    22,
    197,
    47,
    95,
    51,
    201,
    180,
    72,
    203,
    124,
    153,
    151,
    89,
    81,
    102,
    115,
    65,
    238,
    255,
    252,
    120,
    82,
    214,
    202,
    68,
    8,
    138,
    28,
    20,
    163,
    105,
    17,
    73,
    158,
    31,
    95,
    71,
    163,
    86,
    157,
    97,
    122,
    94,
    158,
    47,
    218,
    59,
    105,
    191,
    34,
    1,
    0,
    0,
  ],
  "type": "Buffer",
}
`;
